fix bugs in swagger documentation
