# src/main/java/org/agoncal/application/petstore/rest/CountryEndpoint.java
@@ -2,6 +2,7 @@ package org.agoncal.application.petstore.rest;
 
 import io.swagger.annotations.Api;
 import io.swagger.annotations.ApiOperation;
+import io.swagger.annotations.ApiParam;
 import org.agoncal.application.petstore.model.Country;
 import org.agoncal.application.petstore.util.Loggable;
 
@@ -40,7 +41,7 @@ public class CountryEndpoint
    @POST
    @Consumes( {"application/xml", "application/json"})
    @ApiOperation("Creates a country")
-   public Response create(Country entity)
+   public Response createCountry(@ApiParam(required = true) Country entity)
    {
       em.persist(entity);
       return Response.created(UriBuilder.fromResource(CountryEndpoint.class).path(String.valueOf(entity.getId())).build()).build();
@@ -49,7 +50,7 @@ public class CountryEndpoint
    @DELETE
    @Path("/{id:[0-9][0-9]*}")
    @ApiOperation("Deletes a country given an id")
-   public Response deleteById(@PathParam("id") Long id)
+   public Response deleteCountryById(@PathParam("id") Long id)
    {
       Country entity = em.find(Country.class, id);
       if (entity == null)
@@ -64,7 +65,7 @@ public class CountryEndpoint
    @Path("/{id:[0-9][0-9]*}")
    @Produces( {"application/xml", "application/json"})
    @ApiOperation("Retrieves a country by its id")
-   public Response findById(@PathParam("id") Long id)
+   public Response findCountryById(@PathParam("id") Long id)
    {
       TypedQuery<Country> findByIdQuery = em.createQuery("SELECT DISTINCT c FROM Country c WHERE c.id = :entityId ORDER BY c.id", Country.class);
       findByIdQuery.setParameter("entityId", id);
@@ -87,7 +88,7 @@ public class CountryEndpoint
    @GET
    @Produces( {"application/xml", "application/json"})
    @ApiOperation("Lists all the countries")
-   public List<Country> listAll(@QueryParam("start") Integer startPosition, @QueryParam("max") Integer maxResult)
+   public List<Country> listAllCountries(@QueryParam("start") Integer startPosition, @QueryParam("max") Integer maxResult)
    {
       TypedQuery<Country> findAllQuery = em.createQuery("SELECT DISTINCT c FROM Country c ORDER BY c.id", Country.class);
       if (startPosition != null)
@@ -106,10 +107,11 @@ public class CountryEndpoint
    @Path("/{id:[0-9][0-9]*}")
    @Consumes( {"application/xml", "application/json"})
    @ApiOperation("Updates a country")
-   public Response update(Country entity)
+   public Response updateCountry(@PathParam("id")Long id, @ApiParam(required = true) Country entity)
    {
       try
       {
+         entity.setId(id);
          entity = em.merge(entity);
       }
       catch (OptimisticLockException e)
