# src/main/java/org/agoncal/application/petstore/rest/CustomerEndpoint.java
@@ -2,6 +2,7 @@ package org.agoncal.application.petstore.rest;
 
 import io.swagger.annotations.Api;
 import io.swagger.annotations.ApiOperation;
+import io.swagger.annotations.ApiParam;
 import org.agoncal.application.petstore.model.Customer;
 import org.agoncal.application.petstore.util.Loggable;
 
@@ -40,7 +41,7 @@ public class CustomerEndpoint
    @POST
    @Consumes( {"application/xml", "application/json"})
    @ApiOperation("Creates a customer")
-   public Response create(Customer entity)
+   public Response createCustomer(@ApiParam(required = true) Customer entity)
    {
       em.persist(entity);
       return Response.created(UriBuilder.fromResource(CustomerEndpoint.class).path(String.valueOf(entity.getId())).build()).build();
@@ -49,7 +50,7 @@ public class CustomerEndpoint
    @DELETE
    @Path("/{id:[0-9][0-9]*}")
    @ApiOperation("Deletes a customer by id")
-   public Response deleteById(@PathParam("id") Long id)
+   public Response deleteCustomerById(@PathParam("id") Long id)
    {
       Customer entity = em.find(Customer.class, id);
       if (entity == null)
@@ -64,7 +65,7 @@ public class CustomerEndpoint
    @Path("/{id:[0-9][0-9]*}")
    @Produces( {"application/xml", "application/json"})
    @ApiOperation("Finds a customer by it identifier")
-   public Response findById(@PathParam("id") Long id)
+   public Response findCustomerById(@PathParam("id") Long id)
    {
       TypedQuery<Customer> findByIdQuery = em.createQuery("SELECT DISTINCT c FROM Customer c LEFT JOIN FETCH c.homeAddress.country WHERE c.id = :entityId ORDER BY c.id", Customer.class);
       findByIdQuery.setParameter("entityId", id);
@@ -87,7 +88,7 @@ public class CustomerEndpoint
    @GET
    @Produces( {"application/xml", "application/json"})
    @ApiOperation("Lists all the customers")
-   public List<Customer> listAll(@QueryParam("start") Integer startPosition, @QueryParam("max") Integer maxResult)
+   public List<Customer> listAllCustomers(@QueryParam("start") Integer startPosition, @QueryParam("max") Integer maxResult)
    {
       TypedQuery<Customer> findAllQuery = em.createQuery("SELECT DISTINCT c FROM Customer c LEFT JOIN FETCH c.homeAddress.country ORDER BY c.id", Customer.class);
       if (startPosition != null)
@@ -106,10 +107,11 @@ public class CustomerEndpoint
    @Path("/{id:[0-9][0-9]*}")
    @Consumes( {"application/xml", "application/json"})
    @ApiOperation("Updates a customer")
-   public Response update(Customer entity)
+   public Response updateCustomer(@PathParam("id")Long id, @ApiParam(required = true) Customer entity)
    {
       try
       {
+         entity.setId(id);
          entity = em.merge(entity);
       }
       catch (OptimisticLockException e)
